git commit -m "remove Record time to work in docker "